--- a/atlantis/values.yaml
+++ b/atlantis/values.yaml
@@ -40,7 +40,11 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+  path: /
+  host: chart-example.local
 
 resources:
   requests:
@@ -58,3 +62,19 @@ replicaCount: 1
 ## test container details
 test:
   enabled: false
+
+# Optionally specify additional environment variables to be populated from Kubernetes secrets.
+# Useful for passing in TF_VAR_foo or other secret environment variables from Kubernetes secrets.
+environmentSecrets:
+  - name: AWS_DEFAULT_REGION
+    secretKeyRef:
+      name: AWS_DEFAULT_REGION
+      key: eu-west-1
+  # - name: AWS_ACCESS_KEY_ID
+  #   secretKeyRef:
+  #     name: AWS_ACCESS_KEY_ID
+  #     key: the_key_of_the_value_in_the_secret
+  # - name: AWS_SECRET_ACCESS_KEY
+  #   secretKeyRef:
+  #     name: AWS_SECRET_ACCESS_KEY
+  #     key: the_key_of_the_value_in_the_secret
